--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-body {
-    background-image: linear-gradient(315deg, #0d324d 0%, #0a0211 74%);
-    animation: gradient 15s ease infinite;
+
+html,body {
+    background-color: #fff;
     cursor: url("https://i.ibb.co/LRpCcQM/cursor.png"), auto;
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
-    }
+    overflow-x: hidden;
 }
 
 canvas {
@@ -27,6 +14,7 @@ canvas {
 
 .navbar {
     background-color: transparent;
+    margin-bottom: -5rem !important;
 }
 
 .nav-link {
@@ -39,7 +27,12 @@ canvas {
 }
 
 .hero {
+  height: 100vh;
  
+}
+
+.bg-hero {
+  background: linear-gradient(180deg, #FFC700 0%, #FAFF00 0.01%, #FFD600 100%);;
 }
 
 .hero h1 {
@@ -69,6 +62,15 @@ canvas {
     }
   }
 
+  .hero h2 {
+    font-family: epilogue;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 900;
+
+  }
+
   .car {
     width: 30%;
   }  
@@ -77,7 +79,13 @@ canvas {
     width: 50%;
   }
 
+.cd1 {
+  background: linear-gradient(180deg, #FFC700 0%, #FFD600 0.01%, #FF8A00 100%);
+}
 
+.cd2 {
+  background: linear-gradient(180deg, #FFC700 0%, #FF8A00 0.01%, #FF1F00 100%);
+}
 
 .star {
     transform: rotateZ(45deg);
